// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Icons should match snapshot 1`] = `
<View
  style={
    {
      "paddingHorizontal": 14,
    }
  }
>
  <A11yOrderView
    orderKey="«r0»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r0»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Right icon
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Right icon. Rocket.Chat."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {
                    "paddingRight": 45,
                  },
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
          <Text
            accessible={false}
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#3B382E",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "position": "absolute",
                    },
                    {
                      "right": 12,
                    },
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«r1»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r1»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Left icon
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Left icon. https://open.rocket.chat/images/logo/android-chrome-512x512.png."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  {
                    "paddingLeft": 45,
                  },
                  {},
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="https://open.rocket.chat/images/logo/android-chrome-512x512.png"
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6B675A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "position": "absolute",
                    },
                    {
                      "left": 12,
                    },
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«r2»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r2»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Both icons
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Both icons. https://open.rocket.chat/images/logo/android-chrome-512x512.png."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  {
                    "paddingLeft": 45,
                  },
                  {
                    "paddingRight": 45,
                  },
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="https://open.rocket.chat/images/logo/android-chrome-512x512.png"
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6B675A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "position": "absolute",
                    },
                    {
                      "left": 12,
                    },
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#3B382E",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "position": "absolute",
                    },
                    {
                      "right": 12,
                    },
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«r3»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r3»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Icon and touchable clear input
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Icon and touchable clear input. https://open.rocket.chat/images/logo/android-chrome-512x512.png."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {
                    "paddingRight": 45,
                  },
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="https://open.rocket.chat/images/logo/android-chrome-512x512.png"
          />
          <View
            style={
              [
                {
                  "position": "absolute",
                },
                {
                  "right": 12,
                },
              ]
            }
          >
            <ExternalKeyboardView
              canBeFocused={true}
              enableA11yFocus={false}
              enableContextMenu={false}
              group={false}
              haloEffect={true}
              hasKeyDownPress={false}
              hasKeyUpPress={true}
              hasOnFocusChanged={true}
              lockFocus={0}
              onContextMenuPress={[Function]}
              onFocusChange={[Function]}
              onKeyUpPress={[Function]}
              orderIndex={-1}
              screenAutoA11yFocusDelay={300}
              style={
                [
                  undefined,
                  undefined,
                ]
              }
            >
              <RNGestureHandlerButton
                activeOpacity={1}
                collapsable={false}
                delayLongPress={600}
                enabled={true}
                handlerTag={-1}
                handlerType="NativeViewGestureHandler"
                innerRef={null}
                onActiveStateChange={[Function]}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                onPress={[Function]}
                rippleColor="#EAE1CB"
                style={
                  [
                    {
                      "backgroundColor": undefined,
                      "borderRadius": undefined,
                      "margin": undefined,
                      "marginBottom": undefined,
                      "marginEnd": undefined,
                      "marginHorizontal": undefined,
                      "marginLeft": undefined,
                      "marginRight": undefined,
                      "marginStart": undefined,
                      "marginTop": undefined,
                      "marginVertical": undefined,
                    },
                    {
                      "cursor": undefined,
                    },
                  ]
                }
                testID="clear-text-input"
                underlayColor="#EAE1CB"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#EAE1CB",
                      "borderBottomLeftRadius": undefined,
                      "borderBottomRightRadius": undefined,
                      "borderRadius": undefined,
                      "borderTopLeftRadius": undefined,
                      "borderTopRightRadius": undefined,
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  accessibilityLabel="Clear input"
                  accessible={true}
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#3B382E",
                          "fontSize": 20,
                        },
                        [
                          {
                            "lineHeight": 20,
                          },
                          undefined,
                        ],
                        {
                          "fontFamily": "custom",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </RNGestureHandlerButton>
            </ExternalKeyboardView>
          </View>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
</View>
`;

exports[`Story Snapshots: Loading should match snapshot 1`] = `
<View
  style={
    {
      "paddingHorizontal": 14,
    }
  }
>
  <A11yOrderView
    orderKey="«r4»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r4»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Loading false
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Loading false. Rocket.Chat."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«r5»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r5»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Loading true
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Loading true. Rocket.Chat."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                  "padding": 16,
                },
                undefined,
                [
                  {
                    "position": "absolute",
                  },
                  {
                    "right": 12,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityRole="progressbar"
              collapsable={false}
              pointerEvents="none"
              style={
                {
                  "alignItems": "center",
                  "height": 31,
                  "justifyContent": "center",
                  "opacity": 1,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                  "width": 32,
                }
              }
            >
              <RNCMaskedView
                style={
                  {
                    "height": 31,
                    "width": 32,
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <Image
                    resizeMode="contain"
                    source="test-file-stub"
                    style={
                      {
                        "height": 31,
                        "width": 32,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "height": 31,
                        "width": 32,
                      },
                      {
                        "backgroundColor": "#0B3A1C",
                      },
                    ]
                  }
                />
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#22C25C",
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0.3,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#B8FFCF",
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  pointerEvents="none"
                  style={
                    {
                      "alignItems": "center",
                      "bottom": 0,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    pointerEvents="none"
                    style={
                      {
                        "height": 48,
                        "opacity": 0,
                        "position": "absolute",
                        "transform": [
                          {
                            "scale": 2.05,
                          },
                        ],
                        "width": 48,
                      }
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={48}
                      bbWidth={48}
                      focusable={false}
                      height={48}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 48,
                            "width": 48,
                          },
                        ]
                      }
                      width={48}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGDefs>
                          <RNSVGRadialGradient
                            cx="50%"
                            cy="50%"
                            fx="50%"
                            fy="50%"
                            gradient={
                              [
                                0.14,
                                4647810,
                                0.19,
                                1197142166,
                                0.24,
                                -1940852596,
                                0.27,
                                -12784776,
                                0.295,
                                -4653105,
                                0.315,
                                -9699422,
                                0.34,
                                -229576564,
                                0.39,
                                3331945,
                              ]
                            }
                            gradientTransform={null}
                            gradientUnits={0}
                            name="ripple0"
                            rx="50%"
                            ry="50%"
                          />
                        </RNSVGDefs>
                        <RNSVGRect
                          fill={
                            {
                              "brushRef": "ripple0",
                              "type": 1,
                            }
                          }
                          height="100%"
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width="100%"
                          x="0"
                          y="0"
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                  <View
                    collapsable={false}
                    pointerEvents="none"
                    style={
                      {
                        "height": 48,
                        "opacity": 0,
                        "position": "absolute",
                        "transform": [
                          {
                            "scale": 2.05,
                          },
                        ],
                        "width": 48,
                      }
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={48}
                      bbWidth={48}
                      focusable={false}
                      height={48}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 48,
                            "width": 48,
                          },
                        ]
                      }
                      width={48}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGDefs>
                          <RNSVGRadialGradient
                            cx="50%"
                            cy="50%"
                            fx="50%"
                            fy="50%"
                            gradient={
                              [
                                0.14,
                                4647810,
                                0.19,
                                1197142166,
                                0.24,
                                -1940852596,
                                0.27,
                                -12784776,
                                0.295,
                                -4653105,
                                0.315,
                                -9699422,
                                0.34,
                                -229576564,
                                0.39,
                                3331945,
                              ]
                            }
                            gradientTransform={null}
                            gradientUnits={0}
                            name="ripple430"
                            rx="50%"
                            ry="50%"
                          />
                        </RNSVGDefs>
                        <RNSVGRect
                          fill={
                            {
                              "brushRef": "ripple430",
                              "type": 1,
                            }
                          }
                          height="100%"
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width="100%"
                          x="0"
                          y="0"
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                  <View
                    collapsable={false}
                    pointerEvents="none"
                    style={
                      {
                        "height": 48,
                        "opacity": 0,
                        "position": "absolute",
                        "transform": [
                          {
                            "scale": 2.05,
                          },
                        ],
                        "width": 48,
                      }
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={48}
                      bbWidth={48}
                      focusable={false}
                      height={48}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 48,
                            "width": 48,
                          },
                        ]
                      }
                      width={48}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGDefs>
                          <RNSVGRadialGradient
                            cx="50%"
                            cy="50%"
                            fx="50%"
                            fy="50%"
                            gradient={
                              [
                                0.14,
                                4647810,
                                0.19,
                                1197142166,
                                0.24,
                                -1940852596,
                                0.27,
                                -12784776,
                                0.295,
                                -4653105,
                                0.315,
                                -9699422,
                                0.34,
                                -229576564,
                                0.39,
                                3331945,
                              ]
                            }
                            gradientTransform={null}
                            gradientUnits={0}
                            name="ripple870"
                            rx="50%"
                            ry="50%"
                          />
                        </RNSVGDefs>
                        <RNSVGRect
                          fill={
                            {
                              "brushRef": "ripple870",
                              "type": 1,
                            }
                          }
                          height="100%"
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width="100%"
                          x="0"
                          y="0"
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#FFFFFF",
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </RNCMaskedView>
            </View>
          </View>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
</View>
`;

exports[`Story Snapshots: Multiline should match snapshot 1`] = `
<View
  style={
    {
      "paddingHorizontal": 14,
    }
  }
>
  <A11yOrderView
    orderKey="«r6»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r6»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Multiline text
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Multiline text. Rocket.Chat

https://open.rocket.chat/images/logo/android-chrome-512x512.png
."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            multiline={true}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat

https://open.rocket.chat/images/logo/android-chrome-512x512.png
"
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
</View>
`;

exports[`Story Snapshots: SecureTextEntry should match snapshot 1`] = `
<View
  style={
    {
      "paddingHorizontal": 14,
    }
  }
>
  <A11yOrderView
    orderKey="«r7»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r7»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Secure text disabled
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Secure text disabled. Rocket.Chat."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«r8»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r8»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Secure text enabled
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Secure text enabled."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            secureTextEntry={true}
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {
                    "paddingRight": 45,
                  },
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
          <A11yIndexView
            importantForAccessibility="yes"
            orderFocusType={0}
            orderIndex={2}
            orderKey="«r8»"
            style={
              [
                {
                  "position": "absolute",
                },
                {
                  "right": 12,
                },
              ]
            }
          >
            <ExternalKeyboardView
              canBeFocused={true}
              enableA11yFocus={false}
              enableContextMenu={false}
              group={false}
              haloEffect={true}
              hasKeyDownPress={false}
              hasKeyUpPress={true}
              hasOnFocusChanged={true}
              lockFocus={0}
              onContextMenuPress={[Function]}
              onFocusChange={[Function]}
              onKeyUpPress={[Function]}
              orderIndex={-1}
              screenAutoA11yFocusDelay={300}
              style={
                [
                  undefined,
                  undefined,
                ]
              }
            >
              <RNGestureHandlerButton
                activeOpacity={1}
                collapsable={false}
                delayLongPress={600}
                enabled={true}
                handlerTag={-1}
                handlerType="NativeViewGestureHandler"
                innerRef={null}
                onActiveStateChange={[Function]}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                onPress={[Function]}
                rippleColor="#EAE1CB"
                style={
                  [
                    {
                      "backgroundColor": undefined,
                      "borderRadius": undefined,
                      "margin": undefined,
                      "marginBottom": undefined,
                      "marginEnd": undefined,
                      "marginHorizontal": undefined,
                      "marginLeft": undefined,
                      "marginRight": undefined,
                      "marginStart": undefined,
                      "marginTop": undefined,
                      "marginVertical": undefined,
                    },
                    {
                      "cursor": undefined,
                    },
                  ]
                }
                underlayColor="#EAE1CB"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#EAE1CB",
                      "borderBottomLeftRadius": undefined,
                      "borderBottomRightRadius": undefined,
                      "borderRadius": undefined,
                      "borderTopLeftRadius": undefined,
                      "borderTopRightRadius": undefined,
                      "bottom": 0,
                      "left": 0,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  accessibilityLabel="Show Password"
                  accessible={true}
                  style={{}}
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#3B382E",
                          "fontSize": 20,
                        },
                        [
                          {
                            "lineHeight": 20,
                          },
                          undefined,
                        ],
                        {
                          "fontFamily": "custom",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </RNGestureHandlerButton>
            </ExternalKeyboardView>
          </A11yIndexView>
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
</View>
`;

exports[`Story Snapshots: ShortAndLong should match snapshot 1`] = `
<View
  style={
    {
      "paddingHorizontal": 14,
    }
  }
>
  <A11yOrderView
    orderKey="«r9»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«r9»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Short Text
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Short Text. Rocket.Chat."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="Rocket.Chat"
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
  <A11yOrderView
    orderKey="«ra»"
  >
    <A11yIndexView
      importantForAccessibility="yes"
      orderFocusType={0}
      orderIndex={1}
      orderKey="«ra»"
    >
      <View
        style={
          [
            {
              "gap": 4,
              "marginBottom": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={false}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "lineHeight": 22,
                "textAlign": "left",
              },
              {
                "color": "#2C2A21",
              },
            ]
          }
        >
          Long Text
           
        </Text>
        <View
          accessible={false}
          style={
            {
              "justifyContent": "center",
              "position": "relative",
            }
          }
        >
          <TextInput
            accessibilityLabel="Long Text. https://open.rocket.chat/images/logo/android-chrome-512x512.png."
            accessible={true}
            autoCapitalize="none"
            autoCorrect={false}
            keyboardAppearance="light"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#8A8471"
            style={
              [
                {
                  "color": "#2C2A21",
                },
                [
                  {
                    "backgroundColor": "transparent",
                    "borderRadius": 16,
                    "borderWidth": 1.5,
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 54,
                    "paddingHorizontal": 16,
                    "paddingVertical": 14,
                    "textAlign": "left",
                  },
                  undefined,
                  {},
                  {
                    "backgroundColor": "#FFFDF6",
                    "borderColor": "#E4D8BC",
                    "color": "#2C2A21",
                  },
                  {},
                  {},
                  undefined,
                ],
                {
                  "textAlign": "auto",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="https://open.rocket.chat/images/logo/android-chrome-512x512.png"
          />
        </View>
      </View>
    </A11yIndexView>
  </A11yOrderView>
</View>
`;
